Started work on benchmarking rust code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["benjazzy"]
 edition = "2021"
 
 [lib]
+# crate-type = ["rlib"]
 crate-type = ["cdylib", "rlib"]
 
 [features]
@@ -27,8 +28,14 @@ features = [
 ]
 
 [dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
 wasm-bindgen-test = "0.3.34"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+debug = true
+
+[[bench]]
+name = "bench"
+harness = false
