--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,12 @@
-[package]
-name = "wasm-game-of-life"
-version = "0.1.0"
-authors = ["benjazzy"]
-edition = "2021"
+[workspace]
 
-[lib]
-# crate-type = ["rlib"]
-crate-type = ["cdylib", "rlib"]
-
-[features]
-default = ["console_error_panic_hook"]
-
-[dependencies]
-wasm-bindgen = "0.2.84"
-
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
-console_error_panic_hook = { version = "0.1.7", optional = true }
-js-sys = "0.3.64"
-
-[dependencies.web-sys]
-version = "0.3"
-features = [
-  "console",
+resolver = "2"
+members = [
+  "rusty-game-of-life",
+  "wasm-game-of-life",
 ]
-
-[dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports"] }
-wasm-bindgen-test = "0.3.34"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
 debug = true
-
-[[bench]]
-name = "bench"
-harness = false
