--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ members = [
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+# debug = true
+
+[profile.bench]
 debug = true
