Changed js project structure.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "battle-of-life",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "web/index.js",
   "bin": {
     "create-wasm-app": ".bin/create-wasm-app.js"
   },
@@ -27,12 +27,13 @@
   },
   "homepage": "",
   "dependencies": {
-    "wasm-battle-of-life": "file:../wasm-battle-of-life/pkg"
+    "wasm-battle-of-life": "file:wasm-battle-of-life/pkg"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0",
+    "tailwindcss": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "webpack-dev-server": "^3.1.5"
   }
 }
