--- a/www/package.json
+++ b/www/package.json
@@ -27,13 +27,13 @@
   },
   "homepage": "",
   "dependencies": {
-    "wasm-battle-of-life": "file:wasm-battle-of-life/pkg"
+    "wasm-battle-of-life": "file:../wasm-battle-of-life/pkg"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0",
+    "copy-webpack-plugin": "^5.1.2",
     "tailwindcss": "^3.3.3",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.1.5"
   }
 }
