--- a/www/package.json
+++ b/www/package.json
@@ -31,9 +31,14 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.2",
+    "css-loader": "^6.8.1",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.4",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.15.1"
   }
 }
